@@ -12,6 +12,7 @@
 * Add - Dispute Status Chip into the header of the Dispute Details page.
 * Fix - Use a singular label in the summary of Transactions and Deposits lists.
 * Add - Disable payment gateway when not in test mode and not using https or ssl checkout enforcement.
+* Fix - Onboarding redirection occasionally not finalizing account connection.
 
 = 2.7.0 - 2021-07-14 =
 * Add - Add a link to the snackbar notice that appears after submitting or saving evidence for a dispute challenge.
